--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
 	</parent>
 	<groupId>com.devrezaur</groupId>
 	<artifactId>SpringBootQuizApp</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>SpringBootQuizApp</name>
 	<description>Simple quiz application using Spring Boot &amp; MySQL</description>
 	<properties>
-		<java.version>15</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 <!--		<dependency>-->
